# test_jni

./: CMakeLists.txt  README.md  build.sh
src/main/java/com/baidu/test/: HelloWorld.java
src/main/jni/cpp/: HelloWorld.cpp
src/main/jni/libs/: libHelloJni.dylib
